# scp_news_bot

./: .gitignore  main.py  setup.cfg
sources/src_bot/adapters/bot/: app.py  controllers.py
