[metadata]
name = src_news
version = 0.0.1

[options]
packages = find_namespace:
python_requires = >=3.10
package_dir =
    = sources
install_requires =
    pydantic~=1.8.2
    sqlalchemy~=1.4.43
    python-telegram-bot~=13.14


[options.packages.find]
where = sources

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    twine~=3.4.2